changed style to make cleaner and more readable, fixed display of clear completed button

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   line-height: 1.4em;
-  background: #f5f5f5 url(../img/six.jpg) center ;
+  background: gainsboro;
   color: #4d4d4d;
   min-width: 230px;
   max-width: 550px;
@@ -57,7 +57,7 @@ button, input[type="checkbox"] {
   font-size: 100px;
   font-weight: 100;
   text-align: center;
-  color: darkblue;
+  color: darkseagreen;
   font-family: 'Fredericka the Great', cursive;
   margin-top: 40px;
 }
@@ -122,7 +122,7 @@ label[for='toggle-all'] {
 }
 
 #toggle-all:checked:before {
-  color: #737373;
+  color: darkseagreen;
 }
 
 #todo-list {
@@ -179,7 +179,7 @@ label[for='toggle-all'] {
 }
 
 #todo-list li .toggle:checked:after {
-  color: darkblue;
+  color: darkseagreen;
   text-shadow: 0 1px 0 #ddd;
   bottom: 1px;
   position: relative;
@@ -244,7 +244,7 @@ label[for='toggle-all'] {
   height: 20px;
   z-index: 1;
   text-align: center;
-  background-color: aliceblue;
+  background-color: darkseagreen;
   box-shadow: 3px 5px 6px 2px rgba(0,0,0,.35);
   font-variant: small-caps;
 }
@@ -277,7 +277,7 @@ label[for='toggle-all'] {
 }
 
 #filters li a.selected {
-  border-color: darkblue;
+  border-color: gainsboro;
 }
 
 #clear-completed {
